package org.springframework.cloud.pattern.command;

/**
 * @author zhy
 * @date 2023/5/29 17:11
 */
public interface Command {
    void execute();
}
